# rustea

./: Cargo.toml  README.md
rustea-lib/: Cargo.toml
rustea-lib/src/: ecga.rs  fitness.rs  gene.rs  genome.rs  genotype.rs  individual.rs  lib.rs  model.rs  rng.rs  selection.rs  simplega.rs  statistics.rs  types.rs  variation.rs
src/: bitstring.rs  ecga.rs  fitness.rs  gene.rs  genome.rs  genotype.rs  individual.rs  main.rs  model.rs  rng.rs  selection.rs  simple.rs  simplega.rs  statistics.rs  types.rs  variation.rs
