[package]
name = "rustea"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/pvunderink/rustea"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustea-lib = { path = "./rustea-lib" }

[workspace]
members = ["rustea-lib"]
