[package]
name = "rustea-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-linalg = { version = "0.16.0", features = ["openblas-static"] }
rand = "0.8.5"
rand_distr = "0.4.3"
num-traits = "0.2.15"
# partial_application = "0.2.1"
rayon = "1.7.0"
derivative = "2.2.0"
approx = "0.5.1"
rand_pcg = "0.3.1"
rand_xoshiro = "0.6.0"
arrayvec = "0.7.4"

[profile.release]
debug = 1

# [rust]
# debuginfo-level = 1
