[package]
name = "rustea-lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.16.1", features = ["rayon"] }
ndarray-linalg = { version = "0.17.0", features = ["openblas-static"] }
rand = "0.9.1"
rand_distr = "0.5.1"
num-traits = "0.2.19"
# partial_application = "0.2.1"
rayon = "1.10.0"
approx = "0.5.1"
rand_pcg = "0.9.0"
rand_xoshiro = "0.7.0"
arrayvec = "0.7.6"

[profile.release]
debug = 1

# [rust]
# debuginfo-level = 1
