[package]
name = "rustea-lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.16.1", features = ["rayon"] }
ndarray-linalg = { version = "0.17.0", features = [
    "openblas-static",
], optional = true }
rand = "0.9.1"
rand_distr = "0.5.1"
num-traits = "0.2.19"
# partial_application = "0.2.1"
rayon = "1.10.0"
approx = "0.5.1"
rand_pcg = { version = "0.9.0", optional = true }
rand_xoshiro = { version = "0.7.0", optional = true }
arrayvec = { version = "0.7.6", optional = true }

[profile.release]
debug = 1

[features]
default = ["rngs"]
arrayvec = ["dep:arrayvec"]
statistics = ["dep:ndarray-linalg"]
rngs = ["dep:rand_pcg", "dep:rand_xoshiro"]
# [rust]
# debuginfo-level = 1
